Fix spacing issue for live forms, fix icon size within the panel.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -135,7 +135,7 @@ html, body {
     vertical-align: middle;
     margin: 0;
     text-overflow: ellipsis;
-    max-width: 95%;
+    max-width: 92%;
     overflow: hidden;
   }
 }
@@ -2628,6 +2628,14 @@ If the height and width are not specified the video takes the height of the post
       position: relative;
       top: 50%;
     }
+  }
+}
+
+.wm-app {
+  .app-form, .app-liveform {
+     .panel-body .app-grid-layout {
+        padding: 12px;
+     }
   }
 }
 
